# StarcraftCombatSim

./: .gitignore  CMakeLists.txt  README.md  build_win.bat  generate_vs.bat  imgui.ini
src/: GameState.cpp  GameState.h  OpenBWCombat.h  Renderer.cpp  Renderer.h  Scripts.hpp  main.cpp
src/openbw/: bwgame.h  korean.h
vs/: StarCraftCombat.sln  StarCraftCombatCore.vcxproj  StarCraftCombatCore.vcxproj.filters  StarCraftCombatVisualizer.vcxproj  StarcraftCombatSim.sln  StarcraftCombatSimCore.vcxproj  StarcraftCombatSimVisualizer.vcxproj  StarcraftCombatSimVisualizer.vcxproj.filters
